--- a/app/static/bootstrap/css/signin.css
+++ b/app/static/bootstrap/css/signin.css
@@ -4,6 +4,11 @@ body {
   background-color: #eee;
 }
 
+.login-error {
+    color: red;
+    margin: 0 auto;
+}
+
 .form-signin {
   max-width: 330px;
   padding: 15px;
